# DirShare

./: .gitignore  CLAUDE.md  CMakeLists.txt  Checksum.cpp  Checksum.h  DirShare.cpp  DirShare.idl  DirShare.mpc  DirShare.mwc  FileChangeTracker.cpp  FileChangeTracker.h  FileChunkListenerImpl.cpp  FileChunkListenerImpl.h  FileContentListenerImpl.cpp  FileContentListenerImpl.h  FileEventListenerImpl.cpp  FileEventListenerImpl.h  FileMonitor.cpp  FileMonitor.h  FileUtils.cpp  FileUtils.h  README.md  RobotFramework.md  SnapshotListenerImpl.cpp  SnapshotListenerImpl.h  build_with_asan.sh  dirshare-ui-prompt.md  dirshare_spec_prompt.md  rtps.ini  run_leak_tests.sh  run_test.pl
.specify/memory/: constitution.md
docs/: LEAK_TESTING.md
robot/: .gitignore  README.md  RobustnessTests.robot  UserStories.robot  requirements.txt  test_debug.py
robot/keywords/: DDSKeywords.robot  DirShareKeywords.robot  FileOperations.robot  ParticipantControl.robot  SyncVerification.robot  Utilities.robot
robot/libraries/: ChecksumLibrary.py  DirShareLibrary.py  MetadataLibrary.py
tests/: ChecksumBoostTest.cpp  DirectorySnapshotBoostTest.cpp  FileChangeTrackerBoostTest.cpp  FileChunkBoostTest.cpp  FileContentBoostTest.cpp  FileEventCreateBoostTest.cpp  FileEventDeleteBoostTest  FileEventDeleteBoostTest.cpp  FileEventModifyBoostTest.cpp  FileMonitorBoostTest.cpp  FileMonitorCreateBoostTest.cpp  FileUtilsBoostTest.cpp  MetadataPreservationBoostTest  MetadataPreservationBoostTest.cpp  README.md  TimestampComparisonBoostTest.cpp  fix_tests.py  run_tests.pl  tests.mpc  tests.mwc
(+22 files in other folders)
